@@ -1,5 +1,11 @@
+Note
+====
 
-FILES
+There is now a user manual which can be read using yelp and can be found under
+'development'. Please refer to this documentation for up-to-date information.
+
+
+Files
 =====
 
 setting-up.txt
@@ -13,12 +19,9 @@ sections-file.txt
     describes the MODULE-sections.txt file which is used to organise the
     documentation.
 
-
-
 style-guide.txt
     Initial draft of a style guide for writing GTK+ docs.
 
 authors.txt
     notes for authors of the GTK documentation. The abbreviations to use,
     a few useful DocBook tags etc.
-
