@@ -1,3 +1,12 @@
+Note
+====
+
+There is now a user manual which can be read using yelp and can be found under
+'development'. Please refer to this documentation for up-to-date information.
+
+
+HowTo
+=====
 
 These are the comment blocks used in Gnome source files to document
 functions (and macros, signals and properties, if you want).
