@@ -1,3 +1,12 @@
+Note
+====
+
+There is now a user manual which can be read using yelp and can be found under
+'development'. Please refer to this documentation for up-to-date information.
+
+
+*-section.txt
+=============
 
 This describes the MODULE-sections.txt file which is used to organise the
 documentation output by gtk-doc.
