@@ -1,3 +1,9 @@
+Note
+====
+
+There is now a user manual which can be read using yelp and can be found under
+'development'. Please refer to this documentation for up-to-date information.
+
 
 How to Set Up an Application or Library to use GTK-Doc
 ======================================================
