@@ -1,3 +1,9 @@
+Note
+====
+
+There is now a user manual which can be read using yelp and can be found under
+'development'. Please refer to this documentation for up-to-date information.
+
 
 NOTE: This is only a draft version. Don't make major changes to your
       documentation until we've agreed on all this.
