@@ -1,3 +1,14 @@
+2005-09-20  Stefan Kost  <ensonic@users.sf.net>
+
+	* doc/README:
+	* doc/authors.txt:
+	* doc/gnome.txt:
+	* doc/sections-file.txt:
+	* doc/setting-up.txt:
+	* doc/style-guide.txt:
+	* gtkdoc-common.pl.in:
+          adding a note about where the new docs are
+
 2005-09-15  Damon Chaplin  <damon@gnome.org>
 
 	* gtkdoc-scan.in (ScanHeader): 
